ispCP ω 1.1.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-12-12 Laurent Declercq
	- GUI:
		* Fixed #2099: "unexpected T_IF in /var/www/ispcp/gui/include/input-checks.php on line 261"
		* Fixed #2101: Clean install Debian Lenny - ispCP 1.1.0 Login Error
		* Fixed #2094: Redirection to the ispCP tools - Bad regular expression

2009-12-12 Benedikt Heintel
	- DISTS:
		* Updated: CentOS INSTALL

2009-12-11 Benedikt Bauer
	- DISTS:
		* Updated: Ubuntu packages

2009-12-11 Laurent Declercq
	- GUI:
		* Fixed #2098: Unable to add subdomain linked to an IDN
		* Orderpanel: Domain name validation - Old error message deleted
		* Added status of available functionalities (Backup and Manual DNS) in customer overview page
		* Removed HTML comment related to domain name in domain default page. Reason: All labels with double hyphens in HTML comments causes rendering errors with Firefox. See http://www.w3.org/TR/html4/intro/sgmltut.html#h-3.2.4 for more information about this issue.

2009-12-10 Laurent Declercq
	- GUI:
		* Fixed #1995: Client/Daily Backup

2009-12-10 Benedikt Heintel
	- LANGUAGES:
		* Updated all .po files

2009-12-09 Benedikt Heintel
	- GUI:
		* Fixed some graphical display issues

2009-12-09 Laurent Declercq
	- GUI:
		* Fixed: Unable to add new IDN domain name
		* Fixed: Domains alias - Mount point issue : The dot character should not be replaced by underline
	- SETUP:
		* Improvement and cleanup updDB.php script
		* Updated behavior for 'failed' status on update
		* Added log file for database, customers and permissions update process
		* Small fix

2009-12-08 Benedikt Heintel
	- GUI:
		* Added help for new domain validation
	- SETUP:
		* Fixed some warnings

2009-12-07 Benedikt Heintel
	- DOCS:
		* Updated: Update Process
	- SETUP:
		* Fixed a small bug
		* Updated all text strings on update

2009-12-07 Laurent Declercq
	- GUI:
		* Fixed: Undefined constant VFS_ASCII
		* Fixed: ftp_get() expects parameter 4 to be long, string given...
	- ENGINE: