@@ -6,6 +6,7 @@ ispCP ω 1.1.0 Changelog
 		* Fixed #2099: "unexpected T_IF in /var/www/ispcp/gui/include/input-checks.php on line 261"
 		* Fixed #2101: Clean install Debian Lenny - ispCP 1.1.0 Login Error
 		* Fixed #2094: Redirection to the ispCP tools - Bad regular expression
+		* Fixed #2102: input-checks.php new error
 
 2009-12-12 Benedikt Heintel
 	- DISTS:
